--- a/nova.html
+++ b/nova.html
@@ -7,6 +7,7 @@
 
 <body>
   <h1>Get to Know Nova</h1>
+  <img src="novapic1.jpg" alt="A picture of Nova">
   <h2>Here are some things about me...</h2>
   <h3>Here are some of my favorite people!</h3>
   <ul>
@@ -19,13 +20,13 @@
     </li>
   </ul>
   <h3>Things I Hate</h3>
-  <p>I am not a fan of:</p>
+  <p>I am <strong>not</strong> a fan of:</p>
   <ul>
     <li>Squirrels</li>
     <li>Cats</li>
     <li>Car rides</li>
   </ul>
-  <p>Thanks for reading about me!</p>
+  <p><em>Thanks for reading about me!</em></p>
 </body>
 
 </html>
