--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <h1>Get to Know Nova</h1>
-  <img src="novapic1.jpg" alt="A picture of Nova">
+  <img src="novapic1.JPG" alt="A picture of Nova">
   <h2>Here are some things about me...</h2>
   <h3>Here are some of my favorite people!</h3>
   <ul>
